objects/Opportunity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>Informatics</fullName>
        <description>Sales Process assigned to Informatics users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Stage 1 - Create%2FPlan</fullName>
        </values>
        <values>
            <fullName>Stage 2 - Qualify</fullName>
        </values>
        <values>
            <fullName>Stage 3 - Develop</fullName>
        </values>
        <values>
            <fullName>Stage 4 - Prove</fullName>
        </values>
        <values>
            <fullName>Stage 5 - Negotiation</fullName>
        </values>
        <values>
            <fullName>Stage 6 - Implement %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Zero Stage</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SPI Sales process</fullName>
        <description>SPI Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Stage 1 - Create%2FPlan</fullName>
        </values>
        <values>
            <fullName>Stage 2 - Qualify</fullName>
        </values>
        <values>
            <fullName>Stage 3 - Develop</fullName>
        </values>
        <values>
            <fullName>Stage 4 - Prove</fullName>
        </values>
        <values>
            <fullName>Stage 5 - Negotiation</fullName>
        </values>
        <values>
            <fullName>Stage 6 - Implement %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Zero Stage</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Sales Process</fullName>
        <description>Used by LST Service Contracts</description>
        <isActive>false</isActive>
        <values>
            <fullName>1 Estimate in process</fullName>
        </values>
        <values>
            <fullName>2 Quote Sent</fullName>
        </values>
        <values>
            <fullName>3 PO Received</fullName>
        </values>
        <values>
            <fullName>7 Work Complete</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EMEA SDx Sales Process</fullName>
        <description>EMEA SDx Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Stage 1 - Qualification</fullName>
        </values>
        <values>
            <fullName>Stage 2 - Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Stage 3 - Solution Differentiation</fullName>
        </values>
        <values>
            <fullName>Stage 4 - Objection Handling</fullName>
        </values>
        <values>
            <fullName>Stage 5 - Preferred</fullName>
        </values>
        <values>
            <fullName>Stage 6 - Negotiating%2FForecast</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Instrument Sales Process</fullName>
        <description>Instrument sales process based on customer view</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Stage 1 - Qualification</fullName>
        </values>
        <values>
            <fullName>Stage 2 - Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Stage 3 - Solution Differentiation</fullName>
        </values>
        <values>
            <fullName>Stage 4 - Objection Handling</fullName>
        </values>
        <values>
            <fullName>Stage 5 - Preferred</fullName>
        </values>
        <values>
            <fullName>Stage 6 - Negotiating%2FForecast</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EMEA SDx SPI Sales Process</fullName>
        <description>EMEA SDx SPI Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Stage 1 - Create%2FPlan</fullName>
        </values>
        <values>
            <fullName>Stage 2 - Qualify</fullName>
        </values>
        <values>
            <fullName>Stage 3 - Develop</fullName>
        </values>
        <values>
            <fullName>Stage 4 - Prove</fullName>
        </values>
        <values>
            <fullName>Stage 5 - Negotiate</fullName>
        </values>
        <values>
            <fullName>Stage 6 - Implement</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BE__c</fullName>
        <description>Changed label from BE to BU and reactivating for Oct13</description>
        <inlineHelpText>Please select the Primary Business Unit for this opportunity.</inlineHelpText>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASLS</fullName>
                </value>
                <value>
                    <fullName>Dx</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000000JDZu&quot;, &quot;Edit&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GROW__c</fullName>
        <formula>IF(NOT(ISBLANK( Referral_Email__c )),IMAGE(&quot;/servlet/servlet.FileDownload?file=0153A000004RF8J&quot;, &quot;Grow&quot;, 30,30),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GROW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://na45.salesforce.com/&quot; &amp; Id</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAIN__c</fullName>
        <description>Strength of Sale  fields</description>
        <label>PAIN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0. No pain or missed opportunity identified</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1. Seller identified pot. pain or missed opp.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2. Sponsor admitted pain or missed opp.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3. Sponsor agreed upon pain reasons</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4. Power admitted pain or missed opportunity</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5. Power agreed upon pain and reasons</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <inlineHelpText>Type of risk for this opportunity. Non-manageable risk will not be included in the forecast.</inlineHelpText>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Risk</fullName>
                    <default>true</default>
                    <label>No Risk</label>
                </value>
                <value>
                    <fullName>Manageable Risk</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X30X__c</fullName>
        <label>Read Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POWER__c</fullName>
        <label>POWER</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0. Potential Power Sponsor not identified</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1. Potential Power Sponsor identified</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2. Access to Power documented with Sponsor</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3. Power engaged in sales conversation</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4. Power agreed upon collaboration plan</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5. Power approved contract signature</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tools__c</fullName>
        <label>Tools</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FinchTV</fullName>
                </value>
                <value>
                    <fullName>GAIT for GeneMapper</fullName>
                </value>
                <value>
                    <fullName>GAIT for SeqScape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VALUE__c</fullName>
        <label>VALUE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0. No value identified</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1. Sponsor shared cost of current situation</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2. Documented cost agreed upon by Sponsor</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3. Power shared cost of current situation</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4. Documented cost agreed upon by Power</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5. Value analysis jointly developed and agreed upon by Power</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NonMQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NonMQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top 5</fullName>
                </value>
                <value>
                    <fullName>Next 10</fullName>
                </value>
                <value>
                    <fullName>General Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Other_Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE(IF( Weighted_Amount__c /  Amount &lt; 0.7, &quot;/img/samples/flag_red.gif&quot;,IF( Weighted_Amount__c /  Amount &lt; 0.81,&quot;/img/samples/flag_yellow.gif&quot;,&quot;/img/samples/flag_green.gif&quot;)),&quot;no status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VISION__c</fullName>
        <label>VISION</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0. No vision of a solution established</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1. Buyer shares initial solution requirements</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2. Differentiated vision created with Sponsor</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3. Documented vision agreed upon by Sponsor</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4. Differentiated vision created with Power</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5. Documented vision agreed upon by Power</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who was the rep that referred this lead?</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Who was the rep that referred this lead?)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budgeted</fullName>
                    <default>true</default>
                    <label>Budgeted</label>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>CFI Application</fullName>
                </value>
                <value>
                    <fullName>CFI Awarded</fullName>
                </value>
                <value>
                    <fullName>CFI All Monies Received</fullName>
                </value>
                <value>
                    <fullName>Grant Application</fullName>
                </value>
                <value>
                    <fullName>Grant Awarded</fullName>
                </value>
                <value>
                    <fullName>NSERC Application</fullName>
                </value>
                <value>
                    <fullName>NSERC Awarded</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Apply for Funding</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTS_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaboration Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OS_Type__c</fullName>
        <label>OS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Expand</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_INF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select If SOW is needed</description>
        <inlineHelpText>Select If SOW is needed</inlineHelpText>
        <label>SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <formula>Service_Case__r.Testing__c</formula>
        <label>Testing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GSAE - for NGS Analysis</fullName>
                </value>
                <value>
                    <fullName>GSAE - for Microarray Analysis</fullName>
                </value>
                <value>
                    <fullName>GeneSifter Lab Edition</fullName>
                </value>
                <value>
                    <fullName>GS AE Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Data Analysis Project</fullName>
                </value>
                <value>
                    <fullName>GeneSifter Analysis Edition</fullName>
                </value>
                <value>
                    <fullName>NextGen</fullName>
                </value>
                <value>
                    <fullName>FinchLab</fullName>
                </value>
                <value>
                    <fullName>iFinch</fullName>
                </value>
                <value>
                    <fullName>Finch Suite Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsQuoted__c</fullName>
        <formula>IF(OR(NOT(ISBLANK( Current_Quote_Number__c )),NOT(ISBLANK( SAP_Quote__c ))),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsQuoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>河北</fullName>
                </value>
                <value>
                    <fullName>内蒙古</fullName>
                </value>
                <value>
                    <fullName>山西</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>河南</fullName>
                </value>
                <value>
                    <fullName>山东</fullName>
                </value>
                <value>
                    <fullName>黑龙江</fullName>
                </value>
                <value>
                    <fullName>吉林</fullName>
                </value>
                <value>
                    <fullName>辽宁</fullName>
                </value>
                <value>
                    <fullName>广东</fullName>
                </value>
                <value>
                    <fullName>广西</fullName>
                </value>
                <value>
                    <fullName>海南</fullName>
                </value>
                <value>
                    <fullName>安徽</fullName>
                </value>
                <value>
                    <fullName>福建</fullName>
                </value>
                <value>
                    <fullName>江苏</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>浙江</fullName>
                </value>
                <value>
                    <fullName>湖北</fullName>
                </value>
                <value>
                    <fullName>湖南</fullName>
                </value>
                <value>
                    <fullName>江西</fullName>
                </value>
                <value>
                    <fullName>重庆</fullName>
                </value>
                <value>
                    <fullName>甘肃</fullName>
                </value>
                <value>
                    <fullName>贵州</fullName>
                </value>
                <value>
                    <fullName>宁夏</fullName>
                </value>
                <value>
                    <fullName>青海</fullName>
                </value>
                <value>
                    <fullName>四川</fullName>
                </value>
                <value>
                    <fullName>西藏</fullName>
                </value>
                <value>
                    <fullName>新疆</fullName>
                </value>
                <value>
                    <fullName>云南</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <label>NS Quote ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFx_Type__c</fullName>
        <inlineHelpText>If selected, complete RFx Form after saving the opportunity record.</inlineHelpText>
        <label>RFx Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to represent who the Reseller Account is.</description>
        <inlineHelpText>Designates the Reseller Account.</inlineHelpText>
        <label>Reseller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration - Onsite</fullName>
                </value>
                <value>
                    <fullName>Configuration - Remote</fullName>
                </value>
                <value>
                    <fullName>Installation - Onsite</fullName>
                </value>
                <value>
                    <fullName>Installation - Remote</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Scoping</fullName>
                </value>
                <value>
                    <fullName>Training - Onsite</fullName>
                </value>
                <value>
                    <fullName>Training - Remote</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Genetic Testing</fullName>
                </value>
                <value>
                    <fullName>Genetic Analysis</fullName>
                </value>
                <value>
                    <fullName>DNA Services</fullName>
                </value>
                <value>
                    <fullName>Bio-therapeutic Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abandoned__c</fullName>
        <formula>IF(OR(ISPICKVAL( StageName ,&quot;Abandoned&quot;),ISPICKVAL(StageName,&quot;Abandoned (E-Com &amp; E-Proc)&quot;)),1,0)</formula>
        <label>Abandoned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALP_Case__c</fullName>
        <description>reference CALP case #</description>
        <label>CALP Case #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_OOP_Day__c</fullName>
        <description>Gets stamped with the day of the week</description>
        <label>C OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Desk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Desk</label>
        <referenceTo>Deal_Desk__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Reagent Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Terms__c</fullName>
        <description>Used in the NetSuite/SalesForce integrationvia DellBoomi
No Longer used as of Feb25, 2016 based on meeting with Justin, Mariah, and Kim.
This field can be re-purposed.</description>
        <label>Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 40</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>FSR Legacy ID</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_Notes__c</fullName>
        <label>OTR Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <description>LST CALP - PO value for billable repair estimate - Do not exceed Amt</description>
        <label>PO Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushCount__c</fullName>
        <label>PushCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Order__c</fullName>
        <label>SAP Order #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Quote__c</fullName>
        <label>SAP Quote #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_When__c</fullName>
        <inlineHelpText>To be filled by Sales Manager only</inlineHelpText>
        <label>What &amp; When</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccr_admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCR/Sales Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001VAlqEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <formula>IF( ISPICKVAL(StageName,&apos;Closed Won&apos; ),  Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Won) Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Status__c</fullName>
        <label>Bid Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>OPEN</fullName>
                </value>
                <value>
                    <fullName>SUBMITTED</fullName>
                </value>
                <value>
                    <fullName>NO BID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Asset__c</fullName>
        <formula>Service_Case__r.Asset.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case - Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_INF__c</fullName>
        <label>Commit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#419249</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Upside</fullName>
                    <color>#E27001</color>
                    <label>Upside</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFF66</color>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>